--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-asgiref
+asgiref==3.7.2
 Django==4.1
 sqlparse==0.4.2
-XlsxWriter~=3.0.3
+typing_extensions==4.8.0
+whitenoise==6.6.0
+XlsxWriter==3.0.9
