--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 asgiref==3.7.2
+astroid==3.0.2
+click==8.1.7
+dill==0.3.7
 Django==4.1
+h11==0.14.0
+isort==5.13.2
+mccabe==0.7.0
+platformdirs==4.1.0
+pylint==3.0.3
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 sqlparse==0.4.2
+tomli==2.0.1
+tomlkit==0.12.3
 typing_extensions==4.8.0
+uvicorn==0.23.2
 whitenoise==6.6.0
 XlsxWriter==3.0.9
